--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .venv
 vaults_cache.json
 vault_details_cache.json
+hyperliquid/__pycache__/__init__.cpython-312.pyc
+hyperliquid/__pycache__/vaults.cpython-312.pyc
+metrics/__pycache__/__init__.cpython-312.pyc
+metrics/__pycache__/drawdown.cpython-312.pyc
